// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Calendar date renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c4 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c9 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar dates renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c4 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c9 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar disabled renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c4 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c9 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar firstDayOfWeek renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c4 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c9 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c4 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c1 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c9 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Calendar size renders 1`] = `
.c0 {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c8 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  fill: #666666;
  stroke: #666666;
}

.c8 g {
  fill: inherit;
  stroke: inherit;
}

.c8 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c8 *[stroke*="#"],
.c8 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c8 *[fill-rule],
.c8 *[FILL-RULE],
.c8 *[fill*="#"],
.c8 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c17 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 48px;
  height: 48px;
  fill: #666666;
  stroke: #666666;
}

.c17 g {
  fill: inherit;
  stroke: inherit;
}

.c17 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c17 *[stroke*="#"],
.c17 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c17 *[fill-rule],
.c17 *[FILL-RULE],
.c17 *[fill*="#"],
.c17 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin: 0;
  padding: 0;
}

.c6 {
  box-sizing: border-box;
  cursor: pointer;
  outline: none;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  opacity: 0.3;
  cursor: default;
  color: inherit;
  border: none;
  padding: 0;
  text-align: inherit;
  padding: 12px;
}

.c7 {
  display: inline-block;
}

.c7:first-child:not(:last-child) {
  margin-right: 12px;
}

.c7 > * {
  vertical-align: bottom;
}

.c13 {
  font-size: 24px;
  line-height: 1.333;
  max-width: 576px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c4 {
  font-size: 18px;
  line-height: 1.333;
  max-width: 432px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c16 {
  font-size: 36px;
  line-height: 1.23;
  max-width: 864px;
  font-weight: 300;
  margin-top: 0;
  margin-bottom: 0;
}

.c12 {
  font-size: 22px;
  line-height: 1.45;
  width: 384px;
}

.c1 {
  font-size: 16px;
  line-height: 1.375;
  width: 192px;
}

.c15 {
  font-size: 36px;
  line-height: 1.11;
  width: 768px;
}

.c14 {
  overflow: hidden;
  height: 329.1428571428571px;
}

.c9 {
  overflow: hidden;
  height: 164.57142857142856px;
}

.c18 {
  overflow: hidden;
  height: 658.2857142857142px;
}

.c10 {
  position: relative;
}

.c11 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-justify: between;
  -ms-flex-justify: between;
  flex-justify: between;
}

@media only screen and (min-width:700px) {
  .c6 {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
    size="small"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c4"
          size="small"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={<FormPrevious />}
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="FormPrevious"
                className="c8"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="9 6 15 12 9 18"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={<FormNext />}
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="FormNext"
                className="c8"
                height="24px"
                role="img"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="9 6 15 12 9 18"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c9"
        size="small"
      >
        <div
          className="c10"
          size="small"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="c12"
    size="medium"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c13"
          size="medium"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="medium"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c8"
                height="24px"
                role="img"
                size="medium"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c14"
        size="medium"
      >
        <div
          className="c10"
          size="medium"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    className="c15"
    size="large"
  >
    <div
      aria-label={undefined}
      className="c2"
      direction="column"
      onKeyDown={[Function]}
    >
      <div
        aria-label={undefined}
        className="c3"
        direction="row"
      >
        <h3
          className="c16"
          size="large"
        >
          <strong>
            Invalid Date
          </strong>
        </h3>
        <div
          aria-label={undefined}
          className="c5"
          direction="row"
        >
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Previous
                size="large"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Previous"
                className="c17"
                height="24px"
                role="img"
                size="large"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                  transform="matrix(-1 0 0 1 24 0)"
                />
              </svg>
            </span>
          </button>
          <button
            aria-label="Invalid Date"
            className="c6"
            disabled={true}
            href={undefined}
            icon={
              <Next
                size="large"
              />
            }
            label={undefined}
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              aria-hidden={true}
              className="c7"
            >
              <svg
                aria-label="Next"
                className="c17"
                height="24px"
                role="img"
                size="large"
                version="1.1"
                viewBox="0 0 24 24"
                width="24px"
              >
                <polyline
                  fill="none"
                  points="7 2 17 12 7 22"
                  stroke="#000"
                  strokeWidth="2"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        className="c18"
        size="large"
      >
        <div
          className="c10"
          size="large"
        >
          <div
            className="c11"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
